--- a/src/index.scss
+++ b/src/index.scss
@@ -21,11 +21,6 @@ body {
   min-width: 300px;
 }
 
-img {
-  object-fit: cover;
-  object-position: 0% 20%;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
